# whyis_weaviate

./: .gitignore  README.md  compose.yaml  pyproject.toml
script/: bootstrap  build  release
whyis_weaviate/: __init__.py  _version.py  plugin.py  vocab.ttl
whyis_weaviate/entity_linker/: __init__.py  entity_linker.py  vocab.ttl
whyis_weaviate/templates/: resource_get.json  resource_search.json  space_get.json  space_search.json
